ready to predict

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
     </div>
     <div id='map' style='width: 100%; height: calc(100vh - 88px - 64px);'></div>
-    <div id="fare" class="position-absolute bg-white p-4 d-none">
+    <div id="fare" class="position-absolute bg-primary p-4 d-none">
       <p id="predicted-fare"></p>
     </div>
   </div>
