implement mapbox geocoder autocomplete

--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-  <!-- MapBox -->
-  <link href='https://api.mapbox.com/mapbox-gl-js/v1.10.1/mapbox-gl.css' rel='stylesheet' />
+  <!-- MapBox Map-->
+  <link href='https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css' rel='stylesheet' />
+  <!-- MapBox Geocoder -->
+  <link rel='stylesheet'
+    href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.7.0/mapbox-gl-geocoder.css' type='text/css' />
   <!-- Flatpickr -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
   <link rel="stylesheet" href="style.css">
@@ -30,14 +33,14 @@
     <div class="position-absolute w-100" id="search">
       <div class="container pt-4 d-flex justify-content-center">
         <form class="form-inline">
-          <input type="text" class="form-control mb-2 mr-sm-2" id="pickup" placeholder="Pickup" name="pickup">
+          <div class="mr-sm-2" id="pickup"></div>
           <input type="hidden" id="pickup_latitude" name="pickup_latitude">
           <input type="hidden" id="pickup_longitude" name="pickup_longitude">
-          <input type="text" class="form-control mb-2 mr-sm-2" id="dropoff" placeholder="Dropoff" name="dropoff">
+          <div class="mr-sm-2" id="dropoff"></div>
           <input type="hidden" id="dropoff_latitude" name="dropoff_latitude">
           <input type="hidden" id="dropoff_longitude" name="dropoff_longitude">
-          <input type="text" class="form-control mb-2 mr-sm-2" id="pickup_datetime" name="pickup_datetime">
-          <select id="passenger_count" name="passenger_count" class="custom-select mb-2 mr-sm-2">
+          <input type="text" class="form-control mr-sm-2" id="pickup_datetime" name="pickup_datetime">
+          <select id="passenger_count" name="passenger_count" class="custom-select mr-sm-2">
             <option value="1" selected>1 person</option>
             <option value="2">2 persons</option>
             <option value="3">3 persons</option>
@@ -47,7 +50,7 @@
             <option value="7">7 persons</option>
             <option value="8">8 persons</option>
           </select>
-          <button type="submit" class="btn btn-primary mb-2" id="get-fare-button">Get fare</button>
+          <button type="submit" class="btn btn-primary" id="get-fare-button">Get fare</button>
         </form>
       </div>
     </div>
@@ -68,10 +71,10 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-  <!-- Algolia places -->
-  <script src="https://cdn.jsdelivr.net/npm/places.js@1.19.0"></script>
-  <!-- MapBox -->
-  <script src='https://api.mapbox.com/mapbox-gl-js/v1.10.1/mapbox-gl.js'></script>
+  <!-- MapBox Map-->
+  <script src='https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js'></script>
+  <!-- MapBox Geocoder -->
+  <script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.7.0/mapbox-gl-geocoder.min.js'></script>
   <!-- Flatpickr -->
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <script src='script.js'></script>
